# cledar-python-sdk

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.js   README.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
audio-fingerprinter/: .clang-tidy  .gitignore  Dockerfile  README.md  audio_fingerprinter.cpp  docker-compose.yaml  main.cpp  meson.build  prosumer.cpp  sonar-project.properties
audio-fingerprinter/fingerprinting/: common.h  fingerprint.cpp  fingerprint.h  legacy_peaks.h  meson.build  peaks.cpp  peaks.h  spectrogram.cpp  spectrogram.h
audio-fingerprinter/fingerprinting/tests/: test_fingerprint.cpp
audio-fingerprinter/resources/radio/: fingerprints1.csv  peak1.bytes  peak2.bytes  spec1.bytes  spec2.bytes
audio-fingerprinter/subprojects/: rdkafka.wrap
audio-fingerprinter/tests/: e2e_test.sh  test_config.cpp
audio-fingerprinter/utils/: config.h  kafka_workers.h
audio_service/: utils.py
dlq_service/: dead_letter_handler.py  output.py
fingerprint-matcher/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  sonar-project.properties
fingerprint-matcher/src/: app_data.proto  app_data_pb2.py  constants.py  data_processing.py  main.py  settings.py  utils.py
kafka_service/: base_kafka_client.py  exceptions.py  input_parser.py  kafka_consumer.py  kafka_producer.py  schemas.py  utils.py
kafka_service/models/: input.py  pipeline.py
kafka_service/tests/: test_input_parser.py  test_kafka_consumer.py  test_kafka_producer.py  test_utils.py
kserve_service/: utils.py
logging/: README.md  universal_formatter.py
miernik_api/: .env.example  README.md  environment.yml
miernik_api/app/: config.py  dependencies.py  exceptions.py  main.py
miernik_api/app/auth/: router.py  schemas.py  utils.py
miernik_api/app/common/: schemas.py  utils.py
miernik_api/app/device/: router.py  schemas.py  utils.py
miernik_api/app/services/: kafka_service.py
monitoring_service/: monitoring_server.py
monitoring_service/tests/: test_monitoring_server.py
redis_service/: example.py  model.py  redis.py  redis_config_store.py
s3_service/: exceptions.py  s3.py  s3_multipart.py  url.py
s3_service/models/: multipart_session_dto.py  s3_part.py  upload_chunk_dto.py  upload_response_dto.py  upload_status.py
s3_service/tests/: conftest.py  test_s3.py  test_s3_multipart.py  test_url.py
storage_service/: object_storage.py  object_storage_multipart.py
storage_service/models/: multipart_session_dto.py  object_storage_part.py
storage_service/tests/: conftest.py  test_object_storage.py  test_object_storage_filesystem.py  test_object_storage_multipart.py  test_url.py
