[tool.black]
line-length = 88

[tool.pylint]
max-line-length = 88
disable = "C0111,C0103,E0401,R0903,W1203"
enable = "W1201"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["confluent_kafka"] # https://github.com/confluentinc/confluent-kafka-python/issues/1408
ignore_missing_imports = true

[tool.poetry]
name = "common-services"
version = "0.1.0"
description = "Common Services for Reference Signals"
authors = ["Krystian Krol"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "2.3.3"
ecs-logging = "2.1.0"
confluent-kafka = "2.4.0"
boto3 = "1.34.138"
boto3-stubs = "1.34.138"
fastapi = "^0.112.3"
prometheus-client = "^0.20.0"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-env = "1.1.3"
Faker= "26.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
