[project]
name = "common-services"
version = "0.0.0"
description = "Common Services for Reference Signals"
authors = [{ name = "Krystian Krol" }]
requires-python = "==3.12.7"
readme = "README.md"
dependencies = [
    "pydantic-settings==2.3.3",
    "ecs-logging==2.1.0",
    "confluent-kafka==2.4.0",
    "boto3==1.34.138",
    "boto3-stubs==1.34.138",
    "fastapi>=0.112.3,<0.113",
    "prometheus-client>=0.20.0,<0.21",
    "uvicorn>=0.30.6,<0.31",
    "redis==5.2.1",
]

[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "pytest-env==1.1.3",
    "Faker==26.0.0",
    "httpx>=0.28.0,<0.29",
]

[tool.pylint]
max-line-length = 88
disable = "C0111,C0103,E0401,R0903,W1203"
enable = "W1201"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true

[tool.hatch.build.targets.sdist]
include = [
    "kafka_service",
    "monitoring_service",
    "s3_service",
]

[tool.hatch.build.targets.wheel]
include = [
    "kafka_service",
    "monitoring_service",
    "s3_service",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = ["confluent_kafka", ".kafka_service.schemas", ".output", ".kafka_service.kafka_producer" ] # https://github.com/confluentinc/confluent-kafka-python/issues/1408
ignore_missing_imports = true


