[tool.poetry]
name = "fingerprint-matcher"
version = "0.1.0"
description = "Worker for fingerprint-matcher"
authors = ["Karol Pustelnik <karolpustelnik@icloud.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
google = "3.0.0"
numpy = "1.26.4"
pandas = "2.2.1"
protobuf = "3.20.0"
pyarrow = "16.1.0"
python-dotenv = "1.0.1"
pydantic = "2.7.4"
pydantic-settings = "2.3.3"
pydantic_core = "2.18.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"